crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@573.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.*, t2.* FROM alpha t1 INNER JOIN beta t2 ON (t1.a = t2.a AND t1.b = t2.b) WHERE t1.b >= 125 AND t1.b < 225 ORDER BY t1.a, t1.b;"
---
SelectStmt@0..137
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      AStar@10..11
        Ascii42@10..11 "*"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t2"
      Ascii46@15..16 "."
      AStar@16..17
        Ascii42@16..17 "*"
  Whitespace@17..18 " "
  From@18..22 "FROM"
  Whitespace@22..23 " "
  JoinExpr@23..82
    RangeVar@23..31
      Ident@23..28 "alpha"
      Whitespace@28..29 " "
      Alias@29..31
        Ident@29..31 "t1"
    Whitespace@31..32 " "
    InnerP@32..37 "INNER"
    Whitespace@37..38 " "
    Join@38..42 "JOIN"
    Whitespace@42..43 " "
    RangeVar@43..50
      Ident@43..47 "beta"
      Whitespace@47..48 " "
      Alias@48..50
        Ident@48..50 "t2"
    Whitespace@50..51 " "
    On@51..53 "ON"
    Whitespace@53..54 " "
    Ascii40@54..55 "("
    BoolExpr@55..82
      AExpr@55..66
        ColumnRef@55..59
          Ident@55..57 "t1"
          Ascii46@57..58 "."
          Ident@58..59 "a"
        Whitespace@59..60 " "
        Ascii61@60..61 "="
        Whitespace@61..62 " "
        ColumnRef@62..66
          Ident@62..64 "t2"
          Ascii46@64..65 "."
          Ident@65..66 "a"
      Whitespace@66..67 " "
      And@67..70 "AND"
      Whitespace@70..71 " "
      AExpr@71..82
        ColumnRef@71..75
          Ident@71..73 "t1"
          Ascii46@73..74 "."
          Ident@74..75 "b"
        Whitespace@75..76 " "
        Ascii61@76..77 "="
        Whitespace@77..78 " "
        ColumnRef@78..82
          Ident@78..80 "t2"
          Ascii46@80..81 "."
          Ident@81..82 "b"
  Ascii41@82..83 ")"
  Whitespace@83..84 " "
  Where@84..89 "WHERE"
  Whitespace@89..90 " "
  BoolExpr@90..116
    AExpr@90..101
      ColumnRef@90..94
        Ident@90..92 "t1"
        Ascii46@92..93 "."
        Ident@93..94 "b"
      Whitespace@94..95 " "
      GreaterEquals@95..97 ">="
      Whitespace@97..98 " "
      AConst@98..101
        Iconst@98..101 "125"
    Whitespace@101..102 " "
    And@102..105 "AND"
    Whitespace@105..106 " "
    AExpr@106..116
      ColumnRef@106..110
        Ident@106..108 "t1"
        Ascii46@108..109 "."
        Ident@109..110 "b"
      Whitespace@110..111 " "
      Ascii60@111..112 "<"
      Whitespace@112..113 " "
      AConst@113..116
        Iconst@113..116 "225"
  Whitespace@116..117 " "
  SortBy@117..130
    Order@117..122 "ORDER"
    Whitespace@122..123 " "
    By@123..125 "BY"
    Whitespace@125..126 " "
    ColumnRef@126..130
      Ident@126..128 "t1"
      Ascii46@128..129 "."
      Ident@129..130 "a"
  Ascii44@130..131 ","
  Whitespace@131..132 " "
  SortBy@132..136
    ColumnRef@132..136
      Ident@132..134 "t1"
      Ascii46@134..135 "."
      Ident@135..136 "b"
  Ascii59@136..137 ";"

