crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@579.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE fract_t0 PARTITION OF fract_t FOR VALUES FROM ('0') TO ('1000');"
---
CreateStmt@0..77
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "fract_t0"
  Whitespace@21..22 " "
  Partition@22..31 "PARTITION"
  Whitespace@31..32 " "
  Of@32..34 "OF"
  Whitespace@34..35 " "
  RangeVar@35..42
    Ident@35..42 "fract_t"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..75
    From@54..58 "FROM"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..63
      Sconst@60..63 "'0'"
    Ascii41@63..64 ")"
    Whitespace@64..65 " "
    To@65..67 "TO"
    Whitespace@67..68 " "
    Ascii40@68..69 "("
    AConst@69..75
      Sconst@69..75 "'1000'"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

