crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@580.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE fract_t1 PARTITION OF fract_t FOR VALUES FROM ('1000') TO ('2000');"
---
CreateStmt@0..80
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "fract_t1"
  Whitespace@21..22 " "
  Partition@22..31 "PARTITION"
  Whitespace@31..32 " "
  Of@32..34 "OF"
  Whitespace@34..35 " "
  RangeVar@35..42
    Ident@35..42 "fract_t"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..78
    From@54..58 "FROM"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..66
      Sconst@60..66 "'1000'"
    Ascii41@66..67 ")"
    Whitespace@67..68 " "
    To@68..70 "TO"
    Whitespace@70..71 " "
    Ascii40@71..72 "("
    AConst@72..78
      Sconst@72..78 "'2000'"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

