crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO prt1 SELECT i, i % 25, to_char(i, 'FM0000') FROM generate_series(0, 599) i WHERE i % 2 = 0;"
---
InsertStmt@0..103
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..16
    Ident@12..16 "prt1"
  Whitespace@16..17 " "
  SelectStmt@17..102
    Select@17..23 "SELECT"
    Whitespace@23..24 " "
    ResTarget@24..25
      ColumnRef@24..25
        Ident@24..25 "i"
    Ascii44@25..26 ","
    Whitespace@26..27 " "
    ResTarget@27..33
      AExpr@27..33
        ColumnRef@27..28
          Ident@27..28 "i"
        Whitespace@28..29 " "
        Ascii37@29..30 "%"
        Whitespace@30..31 " "
        AConst@31..33
          Iconst@31..33 "25"
    Ascii44@33..34 ","
    Whitespace@34..35 " "
    ResTarget@35..54
      FuncCall@35..54
        Ident@35..42 "to_char"
        Ascii40@42..43 "("
        ColumnRef@43..44
          Ident@43..44 "i"
        Ascii44@44..45 ","
        Whitespace@45..46 " "
        AConst@46..54
          Sconst@46..54 "'FM0000'"
    Ascii41@54..55 ")"
    Whitespace@55..56 " "
    From@56..60 "FROM"
    Whitespace@60..61 " "
    RangeFunction@61..86
      List@61..83
        FuncCall@61..83
          Ident@61..76 "generate_series"
          Ascii40@76..77 "("
          AConst@77..78
            Iconst@77..78 "0"
          Ascii44@78..79 ","
          Whitespace@79..80 " "
          AConst@80..83
            Iconst@80..83 "599"
      Ascii41@83..84 ")"
      Whitespace@84..85 " "
      Alias@85..86
        Ident@85..86 "i"
    Whitespace@86..87 " "
    Where@87..92 "WHERE"
    Whitespace@92..93 " "
    AExpr@93..102
      AExpr@93..98
        ColumnRef@93..94
          Ident@93..94 "i"
        Whitespace@94..95 " "
        Ascii37@95..96 "%"
        Whitespace@96..97 " "
        AConst@97..98
          Iconst@97..98 "2"
      Whitespace@98..99 " "
      Ascii61@99..100 "="
      Whitespace@100..101 " "
      AConst@101..102
        Iconst@101..102 "0"
  Ascii59@102..103 ";"

