crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@68.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c, t3.a + t3.b, t3.c FROM (prt1 t1 LEFT JOIN prt2 t2 ON t1.a = t2.b) LEFT JOIN prt1_e t3 ON (t1.a = (t3.a + t3.b)/2) WHERE t1.b = 0 ORDER BY t1.a, t2.b, t3.a + t3.b;"
---
SelectStmt@0..193
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ResTarget@31..42
    AExpr@31..42
      ColumnRef@31..35
        Ident@31..33 "t3"
        Ascii46@33..34 "."
        Ident@34..35 "a"
      Whitespace@35..36 " "
      Ascii43@36..37 "+"
      Whitespace@37..38 " "
      ColumnRef@38..42
        Ident@38..40 "t3"
        Ascii46@40..41 "."
        Ident@41..42 "b"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  ResTarget@44..48
    ColumnRef@44..48
      Ident@44..46 "t3"
      Ascii46@46..47 "."
      Ident@47..48 "c"
  Whitespace@48..49 " "
  From@49..53 "FROM"
  Whitespace@53..54 " "
  Ascii40@54..55 "("
  JoinExpr@55..143
    JoinExpr@55..95
      RangeVar@55..62
        Ident@55..59 "prt1"
        Whitespace@59..60 " "
        Alias@60..62
          Ident@60..62 "t1"
      Whitespace@62..63 " "
      Left@63..67 "LEFT"
      Whitespace@67..68 " "
      Join@68..72 "JOIN"
      Whitespace@72..73 " "
      RangeVar@73..80
        Ident@73..77 "prt2"
        Whitespace@77..78 " "
        Alias@78..80
          Ident@78..80 "t2"
      Whitespace@80..81 " "
      On@81..83 "ON"
      Whitespace@83..84 " "
      AExpr@84..95
        ColumnRef@84..88
          Ident@84..86 "t1"
          Ascii46@86..87 "."
          Ident@87..88 "a"
        Whitespace@88..89 " "
        Ascii61@89..90 "="
        Whitespace@90..91 " "
        ColumnRef@91..95
          Ident@91..93 "t2"
          Ascii46@93..94 "."
          Ident@94..95 "b"
    Ascii41@95..96 ")"
    Whitespace@96..97 " "
    Left@97..101 "LEFT"
    Whitespace@101..102 " "
    Join@102..106 "JOIN"
    Whitespace@106..107 " "
    RangeVar@107..116
      Ident@107..113 "prt1_e"
      Whitespace@113..114 " "
      Alias@114..116
        Ident@114..116 "t3"
    Whitespace@116..117 " "
    On@117..119 "ON"
    Whitespace@119..120 " "
    Ascii40@120..121 "("
    AExpr@121..143
      ColumnRef@121..125
        Ident@121..123 "t1"
        Ascii46@123..124 "."
        Ident@124..125 "a"
      Whitespace@125..126 " "
      Ascii61@126..127 "="
      Whitespace@127..128 " "
      Ascii40@128..129 "("
      AExpr@129..143
        AExpr@129..140
          ColumnRef@129..133
            Ident@129..131 "t3"
            Ascii46@131..132 "."
            Ident@132..133 "a"
          Whitespace@133..134 " "
          Ascii43@134..135 "+"
          Whitespace@135..136 " "
          ColumnRef@136..140
            Ident@136..138 "t3"
            Ascii46@138..139 "."
            Ident@139..140 "b"
        Ascii41@140..141 ")"
        Ascii47@141..142 "/"
        AConst@142..143
          Iconst@142..143 "2"
  Ascii41@143..144 ")"
  Whitespace@144..145 " "
  Where@145..150 "WHERE"
  Whitespace@150..151 " "
  AExpr@151..159
    ColumnRef@151..155
      Ident@151..153 "t1"
      Ascii46@153..154 "."
      Ident@154..155 "b"
    Whitespace@155..156 " "
    Ascii61@156..157 "="
    Whitespace@157..158 " "
    AConst@158..159
      Iconst@158..159 "0"
  Whitespace@159..160 " "
  SortBy@160..173
    Order@160..165 "ORDER"
    Whitespace@165..166 " "
    By@166..168 "BY"
    Whitespace@168..169 " "
    ColumnRef@169..173
      Ident@169..171 "t1"
      Ascii46@171..172 "."
      Ident@172..173 "a"
  Ascii44@173..174 ","
  Whitespace@174..175 " "
  SortBy@175..179
    ColumnRef@175..179
      Ident@175..177 "t2"
      Ascii46@177..178 "."
      Ident@178..179 "b"
  Ascii44@179..180 ","
  Whitespace@180..181 " "
  SortBy@181..192
    AExpr@181..192
      ColumnRef@181..185
        Ident@181..183 "t3"
        Ascii46@183..184 "."
        Ident@184..185 "a"
      Whitespace@185..186 " "
      Ascii43@186..187 "+"
      Whitespace@187..188 " "
      ColumnRef@188..192
        Ident@188..190 "t3"
        Ascii46@190..191 "."
        Ident@191..192 "b"
  Ascii59@192..193 ";"

